--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,13 @@
 # Workflow name for deploying to AWS Elastic Beanstalk
 name: Deploy to Elastic Beanstalk
 
+# Events that trigger the workflow
 on:
   push:
     branches: [main]
   schedule:
     - cron: "0 14 * * *" # Midnight AEST (14:00 UTC)
-  workflow_dispatch:
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   test:
@@ -61,7 +62,7 @@ jobs:
       - name: Create deployment package
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch' || steps.check-changes.outputs.has-changes == 'true'
         run: |
-          zip -r application.zip src index.js package.json package-lock.json utils .ebextensions || echo "Create deployment package failed, but continuing"
+          zip -r application.zip index.js package.json package-lock.json utils routes .ebextensions || echo "Create deployment package failed, but continuing"
           unzip -l application.zip | grep utils/connectDB.js || { echo "utils/connectDB.js missing in application.zip"; exit 1; }
           unzip -l application.zip | grep .ebextensions/node-version.config || { echo ".ebextensions/node-version.config missing in application.zip"; exit 1; }
 
@@ -143,6 +144,7 @@ jobs:
             --environment-name devapi-env \
             --query 'ConfigurationSettings[0].OptionSettings[?Namespace==`aws:elasticbeanstalk:application:environment`]')
           echo "$ENV_VARS" | jq -e '.[] | select(.OptionName=="MONGODB_URI")' || { echo "MONGODB_URI not set in environment"; exit 1; }
+          echo "$ENV_VARS" | jq -e '.[] | select(.OptionName=="NODE_ENV")' || { echo "NODE_ENV not set in environment"; exit 1; }
 
       - name: Retrieve logs on failure
         if: failure() && (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || steps.check-changes.outputs.has-changes == 'true')
@@ -155,15 +157,17 @@ jobs:
             --environment-name devapi-env \
             --info-type tail
           sleep 10
-          aws elasticbeanstalk retrieve-environment-info \
+          TAIL_LOG_URL=$(aws elasticbeanstalk retrieve-environment-info \
             --region ap-southeast-2 \
             --environment-name devapi-env \
-            --info-type tail --query 'EnvironmentInfo[].Message' --output text > eb-logs.txt || echo "Failed to retrieve tail logs"
-          aws s3 cp s3://${{ secrets.S3_BUCKET_NAME }}/DEV-API/DEVAPI-env/logs/eb-activity.log eb-activity.log --region ap-southeast-2 || echo "Failed to retrieve eb-activity.log"
+            --info-type tail --query 'EnvironmentInfo[].Message' --output text)
+          echo "Fetching tail logs from: $TAIL_LOG_URL"
+          curl -s "$TAIL_LOG_URL" > eb-logs.txt || echo "Failed to fetch tail logs"
+          aws s3 cp s3://${{ secrets.S3_BUCKET_NAME }}/resources/environments/logs/publish/e-2hb2mtzzpt/eb-activity.log eb-activity.log --region ap-southeast-2 || echo "Failed to retrieve eb-activity.log"
           echo "Tail logs:"
           cat eb-logs.txt
           echo "eb-activity.log:"
-          cat eb-activity.log
+          cat eb-activity.log || echo "eb-activity.log is empty or not retrieved"
 
       - name: Save last deployed commit SHA
         if: always() && (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || steps.check-changes.outputs.has-changes == 'true')
