--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,12 @@ jobs:
 
       - name: Install dependencies
         if: github.event_name != 'schedule' || steps.check-changes.outputs.has-changes == 'true'
-        run: npm install || echo "Install failed, continuing"
+        env:
+          NODE_ENV: development
+        run: npm install
+
+      - name: List node_modules contents
+        run: ls -la node_modules
 
       - name: Validate package.json
         if: github.event_name != 'schedule' || steps.check-changes.outputs.has-changes == 'true'
@@ -53,7 +58,7 @@ jobs:
         if: github.event_name != 'schedule' || steps.check-changes.outputs.has-changes == 'true'
         run: |
           set -e
-          zip -r application.zip index.js package.json package-lock.json utils routes middleware .ebextensions
+          zip -r application.zip . -x@.ebignore
           if ! unzip -l application.zip | grep -q "utils/connectDB.js"; then
             echo "Missing: utils/connectDB.js"
             exit 1
