--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,11 +118,12 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           NODE_VERSION=$(aws elasticbeanstalk describe-configuration-settings \
-            --region ap-southeast-2 \
-            --application-name "DEV API" \
-            --environment-name devapi-env \
-            --query 'ConfigurationSettings[0].OptionSettings[?OptionName==`NodeVersion`].Value' --output text)
-          echo "Node.js version in environment: $NODE_VERSION"
+          --region ap-southeast-2 \
+          --application-name "DEV API" \
+          --environment-name devapi-env \
+          --query 'ConfigurationSettings[0].OptionSettings[?Namespace==`aws:elasticbeanstalk:container:nodejs` && OptionName==`NodeVersion`].Value' \
+          --output text)
+           echo "Node.js version in environment: $NODE_VERSION"
           [[ "$NODE_VERSION" == 18* ]] || exit 1
 
       - name: Verify environment variables
