--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,10 +35,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        if: github.event_name != 'schedule' || steps.check-changes.outputs.has-changes == 'true'
         uses: actions/setup-node@v4
         with:
-          node-version: "18.20.4"
+          node-version: 22
 
       - name: Install dependencies
         if: github.event_name != 'schedule' || steps.check-changes.outputs.has-changes == 'true'
